# log-parser-tool

./: .gitignore  Makefile  README.md  log.txt  main.py  main_data_parser.py  pyproject.toml  realtime_log_parser.py
scripts/: main_data_parser.py  realtime_log_parser.py
tests/: log_adder.py  tests_log_parser.py
